--- a/templates/home.html
+++ b/templates/home.html
@@ -87,60 +87,107 @@
 
     <blockquote>
 
-    </blockquote>
-
-
-        <blockquote>
-
-        <blockquote>
-
-        </blockquote>
-        <blockquote>
-
-        </blockquote>
-        <blockquote>
-
         </blockquote>
         <blockquote>
 
         </blockquote>
     </div>
 
+    <section class="accordion-section clearfix mt-3" aria-label="Question Accordions">
+        <div class="container">
 
+            <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
+                <h4 id="list-item-1">FAQS</h4>
+                <div class="panel-group" id="accordion" role="tablist" aria-multiselectable="true">
+                <div class="panel panel-default">
+                    <div class="panel-heading p-3 mb-3" role="tab" id="heading0">
+                        <h3 class="panel-title">
+                            <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse0" aria-expanded="true" aria-controls="collapse0">
+                                How do I know this website is legitimate?
 
-        <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">
-            <h4 id="list-item-1">FAQS</h4>
-            <h1>1. How do I know this website is legitimate?
-               <blockquote></blockquote>
-                2. Will my information be shared?
-                <blockquote></blockquote>
-                3. Can I connect to flights?
-                <head>
-                    <style>
-                        body {
-                        }
+                            </a>
+                        </h3>
+                    </div>
+                    <div id="collapse0" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading0">
+                        <div class="panel-body px-3 mb-4">
+                            <p>We use the most reliable websites to gather the most reliable information.</p>
+                            <ul>
+                                <li>Your safety, security, and comfort is of utmost importance to us.</li>
+                                <li>We do our best to stay consistent with the times and make sure we are delivering and posting accurate information.</li>
+                                <li>We appreciate your support and would greatly appreciate feedback.</li>
+                                <li>We are constantly trying to improve and make changes to our site that make it both easier to understand and more interactive.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
 
-                        h1 {
-                            color: black;
-                            text-align: center;
-                        }
+                <div class="panel panel-default">
+                    <div class="panel-heading p-3 mb-3" role="tab" id="heading1">
+                        <h3 class="panel-title">
+                            <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse1" aria-expanded="true" aria-controls="collapse1">
+                                Will my information be shared?
+                            </a>
+                        </h3>
+                    </div>
+                    <div id="collapse1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading1">
+                        <div class="panel-body px-3 mb-4">
+                            <p>No. We do not gather information. There is no required account information, so you do not have to sign in or sign up.</p>
+                        </div>
+                    </div>
+                </div>
 
-                        p {
-                            color: black;
-                            font-family: "Arial Rounded MT Bold";
-                            font-size: 15px;
-                            text-align: center;
+                <div class="panel panel-default">
+                    <div class="panel-heading p-3 mb-3" role="tab" id="heading3">
+                        <h3 class="panel-title">
+                            <a class="collapsed" role="button" title="" data-toggle="collapse" data-parent="#accordion" href="#collapse3" aria-expanded="true" aria-controls="collapse3">
+                               Can I connect to flights?
+                            </a>
+                        </h3>
+                    </div>
+                    <div id="collapse3" class="panel-collapse collapse" role="tabpanel" aria-labelledby="heading3">
+                        <div class="panel-body px-3 mb-4">
+                            <p>At the moment, you cannot. We are in the process of developing a way for that to be possible, however. We apologize for any inconveniences.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
-                        }
-                    </style>
-                </head>
-                <body>
+        </div>
+{#    </section>#}
+{##}
+{#        <div data-bs-spy="scroll" data-bs-target="#list-example" data-bs-offset="0" class="scrollspy-example" tabindex="0">#}
+{#            <h4 id="list-item-1">FAQS</h4>#}
+{#            <h1>1. How do I know this website is legitimate?#}
+{#               <blockquote></blockquote>#}
+{#                2. Will my information be shared?#}
+{#                <blockquote></blockquote>#}
+{#                3. Can I connect to flights?#}
+{#                <head>#}
+{#                    <style>#}
+{#                        body {#}
+{#                        }#}
+{##}
+{#                        h1 {#}
+{#                            color: black;#}
+{#                            text-align: center;#}
+{#                        }#}
+{##}
+{#                        p {#}
+{#                            color: black;#}
+{#                            font-family: "Arial Rounded MT Bold";#}
+{#                            font-size: 15px;#}
+{#                            text-align: center;#}
+{##}
+{#                        }#}
+{#                    </style>#}
+{#                </head>#}
+{#                <body>#}
             </h1>
             <h4 id="list-item-2">Navigation Help</h4>
             <h1>Welcome to our website! This is a help section for navigation, in case you have difficulties finding something. Located at the top is our navigation bar, with all of our content. This includes minilabs and tourism sites. You are currently on our home page. You have access to read more about us and what we do, as well as look at frequently asked questions. </h1>
             <p>...</p>
         </div>
- </div>
+{# </div>#}
 {% endblock %}
 <!-- Setting up a block replacement to customize background to RINGS -->
 {% block background %}
