--- a/templates/wireframes.html
+++ b/templates/wireframes.html
@@ -31,12 +31,10 @@
     </div>
         <div class="container">
             <div class="row">
-                <div class="col">
-                    <img src="/static/Wireframe.png" target="imgbox" width="100%" height="100%"></a>
+                <div class="col" style="margin:auto">
+                    <img src="/static/Wireframe.png" target="imgbox" width="50%" height="50%"></a>
                 </div>
-                <div class="col">
-                    <img src="/static/image.png" target="imgbox" width="100%" height="100%"></a>
-                </div>
+
             </div>
 
         </div>
