--- a/templates/grid.html
+++ b/templates/grid.html
@@ -86,7 +86,7 @@
             <a href="/wireframes">Wireframes</a>
         </div>
         <div class="col-sm" style="font-size:30px;">
-            <a href="https://github.com/Reinhardtlotter/flask_portfolio/issues?q=is%3Aissue+label%3A%22TPT+3%22+is%3Aclosed" target="_blank">TPT3</a>
+            <a href="https://github.com/Reinhardtlotter/flask_portfolio/issues?q=label%3A%22Week+3%22+is%3Aclosed" target="_blank">TPT3</a>
         </div>
     </div>
     <div class="row">
