Main Page Link Fixes

--- a/templates/val.html
+++ b/templates/val.html
@@ -9,38 +9,13 @@
     <title>ValorantClips.com</title>
 </head>
 {% block body %}
-<style>
-    a:link {
-        color: white;
-        background-color: transparent;
-        text-decoration: none;
-    }
-
-    a:visited {
-        color: white;
-        background-color: transparent;
-        text-decoration: none;
-    }
-
-    a:hover {
-        color: white;
-        background-color: transparent;
-        text-decoration: underline;
-    }
-
-    a:active {
-        color: white;
-        background-color: transparent;
-        text-decoration: underline;
-    }
-</style>
 <a style="margin-left:40%; margin-right:0%; font-size:250%">VALORANT CLIPS</a>
 <hr style="color:red; border-color:red">
 <div class="container" style="margin-left: 0%; margin-right: 0%; margin-top: 0%; margin-bottom: 0%">
     <div class="table" style="margin-top:2%;margin-left:10% ;margin-right:10% ; border-color:white; border-top: 1px solid #ffffff;border-bottom:1px solid #ffffff;border-left: 1px solid #ffffff; border-right: 1px solid #ffffff; color: white">
         <tr>Latest Valorant Patch Notes:</tr>
         <br>
-        <a href="https://playvalorant.com/en-us/news/game-updates/valorant-patch-notes-3-07/">https://playvalorant.com/en-us/news/game-updates/valorant-patch-notes-3-07/</a>
+        <a href="https://playvalorant.com/en-us/news/game-updates/valorant-patch-notes-3-07/" style="color:white">https://playvalorant.com/en-us/news/game-updates/valorant-patch-notes-3-07/</a>
     </div>
 </div>
 <div class="container" style="margin-left: 0%; margin-right: 0%; margin-top: 0%; margin-bottom: 0%">
@@ -52,7 +27,7 @@
             <a style="color:red">*** CLIP OF THE DAY ***</a>
             <br>
             <a style="color:red">Submission of: </a>
-            <a href="https://twitter.com/dapr?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">@darp</a>
+            <a href="https://twitter.com/dapr?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor" style="color:white">@darp</a>
             <br>
             <a style="color:red">Description: </a>
             <br>
