--- a/templates/northamerica.html
+++ b/templates/northamerica.html
@@ -173,7 +173,7 @@
                                         <button>                  </button>
                                     </div>
                                     <h1>Accommodations</h1>
-                                    <h3>Below are some great websites to research for living accommodations across the African continent!</h3>
+                                    <h3>Below are some great websites to research for living accommodations across the North American continent!</h3>
                                     <blockquote></blockquote>
                                     <a href="https://www.traveloffpath.com/top-8-unique-places-to-stay-in-the-u-s-for-2021/" >
                                         <div class="vertical-center">
@@ -186,11 +186,6 @@
                                             <a href="https://www.travelandleisure.com/worlds-best/resort-hotels-in-mexico" >
                                                 <div class="vertical-center">
                                                     <button>Top 25 Hotels of Mexico</button>
-                                                </div>
-                                                <a href="https://www.tripadvisor.com/TravelersChoice-Hotels-cTop-g6" >
-                                                    <div class="vertical-center">
-                                                        <button>Top 25 Hotels in Africa</button>
-                                                    </div>
                                                     <a href="https://www.oyster.com/mexico/hotels/roundups/best-luxury-hotels-in-mexico/" >
                                                         <div class="vertical-center">
                                                             <button>18 of the Best Luxury Hotels in Mexico</button>
@@ -205,40 +200,6 @@
 
                                                                                     </button>
                                                         </div>
-
-                            </div>
-                            <div id="section4" class="container-fluid">
-                                <a href="#section5" >
-                                    <div class="vertical-center">
-                                        <button>                  </button>
-                                    </div>
-                                    <div id="section5" class="container-fluid">
-                                        <blockquote>
-
-                                        </blockquote>
-                                        <h1>Read More:</h1>
-                                        <h3>Want to learn moore about African heritage and history? Go to many historical sites.</h3>
-                                        <a href="https://www.travelawaits.com/2563263/historical-sites-africa/" >
-                                            <div class="vertical-center">
-                                                <button>8 Amazing Historical Sites To Experience In Africa</button>
-                                            </div>
-                                            <a href="https://blog.musement.com/us/spectacular-historic-sites-in-africa/" >
-                                                <div class="vertical-center">
-                                                    <button>10 Spectacular African Historical Sites</button>
-                                                </div>
-                                                <a href="https://www.travelawaits.com/2563263/historical-sites-africa/" >
-                                                    <div class="vertical-center">
-                                                        <button>African Landmarks</button>
-                                                    </div>
-                                                    <a href="https://www.africa.com/ten-must-visit-african-museums/" >
-                                                        <div class="vertical-center">
-                                                            <button>10 Must-See Museums</button>
-                                                        </div>
-                                    </div>
-
-                                    {#    <blockquote></blockquote>#}
-
-                            </div>
 
 </body>
 </html>
